[project]
name = "mtn-momo-client"
version = "1.0.0"
description = "MTN Mobile Money API client for Python — collections, disbursements and remittances"
authors = [{name = "lepresk", email = "lepresk@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["httpx"]

[project.optional-dependencies]
dev = ["pytest", "pytest-httpx"]

[project.urls]
Homepage = "https://lepresk.com/blog"
Repository = "https://github.com/lepresk/momo-api-python"

[tool.hatch.build.targets.wheel]
packages = ["momo_api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
